unpackaged/main/default/objects/Stipulations__c/Stipulations__c.object-meta.xml
<CustomObject>
    <description>Stipulation requirements</description>
    <label>Stipulation</label>
    <nameField>
        <displayFormat>Stip - {00000}</displayFormat>
        <label>Stip</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stipulations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>