unpackaged/main/default/objects/Stipulations__c/fields/Broker_Account_Mananger__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account_Mananger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Account Mananger</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stipulations4</relationshipName>
    <type>Lookup</type>
</CustomField>