unpackaged/main/default/objects/Stipulations__c/fields/Documentator__c.field-meta.xml
<CustomField>
    <fullName>Documentator__c</fullName>
    <formula>Oppty_Name__r.Documentator__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Documentator</label>
    <type>Text</type>
</CustomField>