unpackaged/main/default/objects/Stipulations__c/fields/Documentator_ID__c.field-meta.xml
<CustomField>
    <fullName>Documentator_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Documentator ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stipulations3</relationshipName>
    <type>Lookup</type>
</CustomField>