unpackaged/main/default/objects/Stipulations__c/fields/Funder_ID__c.field-meta.xml
<CustomField>
    <fullName>Funder_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funder ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stipulations2</relationshipName>
    <type>Lookup</type>
</CustomField>