unpackaged/main/default/objects/Stipulations__c/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <label>Funding</label>
    <referenceTo>FPC_Funding_del__c</referenceTo>
    <relationshipLabel>Stipulations</relationshipLabel>
    <relationshipName>Stipulations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>