unpackaged/main/default/objects/Stipulations__c/fields/Internal_Review__c.field-meta.xml
<CustomField>
    <fullName>Internal_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Stip is submitted and cleared internally without interaction with sales rep.</description>
    <label>Internal Review</label>
    <type>Checkbox</type>
</CustomField>