unpackaged/main/default/objects/Stipulations__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <formula>IF(
CONTAINS( Lender_Name__r.Name, "National Funding"), 
"National Funding", 
 Lender_Name__r.Name 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender</label>
    <type>Text</type>
</CustomField>