unpackaged/main/default/objects/Stipulations__c/fields/Lender_Name__c.field-meta.xml
<CustomField>
    <fullName>Lender_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lender Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Stipulations</relationshipName>
    <type>Lookup</type>
</CustomField>