unpackaged/main/default/objects/Stipulations__c/fields/Oppty_Name__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Name__c</fullName>
    <description>Oppty Name for this Stipulation</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Stipulations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>