unpackaged/main/default/objects/Stipulations__c/fields/Stip_Complete__c.field-meta.xml
<CustomField>
    <fullName>Stip_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stipulation completd</description>
    <inlineHelpText>Check when Stipulation has been completed</inlineHelpText>
    <label>Stip Complete</label>
    <type>Checkbox</type>
</CustomField>