unpackaged/main/default/objects/Stipulations__c/fields/Stip_Name_Flow_Formula__c.field-meta.xml
<CustomField>
    <fullName>Stip_Name_Flow_Formula__c</fullName>
    <formula>TEXT(Status__c) + " - " +  Stip_Description__c + " (" +  Reason__c + ")"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stip Name Flow Formula</label>
    <type>Text</type>
</CustomField>