unpackaged/main/default/objects/Stipulations__c/fields/Stip_Required_Date__c.field-meta.xml
<CustomField>
    <fullName>Stip_Required_Date__c</fullName>
    <description>Date Stipulation is required to be complete</description>
    <inlineHelpText>Enter Date Stipulation must be completed by Customer</inlineHelpText>
    <label>Stip Required Date</label>
    <type>Date</type>
</CustomField>