unpackaged/main/default/objects/Stipulations__c/fields/Stip_Type__c.field-meta.xml
<CustomField>
    <fullName>Stip_Type__c</fullName>
    <label>Stip Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Funding</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>