unpackaged/main/default/objects/Stipulations__c/fields/Stipulation_Id__c.field-meta.xml
<CustomField>
    <fullName>Stipulation_Id__c</fullName>
    <description>Unique Id of the Stipulation provided from the Lender. This Id is generated from the lender and provided upon approval.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Id of the Stipulation provided from the Lender</inlineHelpText>
    <label>Stipulation Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>