unpackaged/main/default/objects/Stipulations__c/fields/Time_from_Submission__c.field-meta.xml
<CustomField>
    <fullName>Time_from_Submission__c</fullName>
    <formula>IF( 
NOW() - Submitted_Date__c &gt; 0 , 
TEXT( FLOOR( NOW() - Submitted_Date__c ) ) &amp; " days " 
&amp; TEXT( FLOOR( MOD( (NOW() - Submitted_Date__c ) * 24, 24 ) ) ) &amp; " hours " 
&amp; TEXT( ROUND( MOD( (NOW() - Submitted_Date__c ) * 24 * 60, 60 ), 0 ) ) &amp; " minutes", 
"" 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time from Submission</label>
    <type>Text</type>
</CustomField>