unpackaged/main/default/objects/Stipulations__c/fields/Time_to_Clear__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Clear__c</fullName>
    <formula>IF(
  Cleared_Date__c - Submitted_Date__c &gt; 0 ,
  TEXT( FLOOR( Cleared_Date__c - Submitted_Date__c ) ) &amp; " days "
  &amp; TEXT( FLOOR( MOD( (Cleared_Date__c - Submitted_Date__c ) * 24, 24 ) ) ) &amp; " hours "
  &amp; TEXT( ROUND( MOD( (Cleared_Date__c - Submitted_Date__c ) * 24 * 60, 60 ), 0 ) ) &amp; " minutes",
  ""
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Clear</label>
    <type>Text</type>
</CustomField>